--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -183,8 +183,9 @@ h1 {
     height: 10%;
     padding: 0;
     margin: 0;
-    position: absolute;
     justify-content: flex-end;
+    position: fixed;
+    z-index: 100;
   }
 
   .navbar li {
@@ -216,7 +217,7 @@ a:hover {
     padding: 0;
   }
 
-  .navbar li:hover ul {
+  .navbar li:active ul {
     display: block;
   }
 
@@ -231,12 +232,27 @@ a:hover {
     border-bottom: 1px solid #444444;
   }
 
-  .navbar li ul li a:hover {
+  .navbar li ul li a:active {
     background-color: #a3a1a1;
   }
 
   i.fa.fa-solid.fa-list {
     display: initial;
+  }
+
+  #portfolio .projectslist {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+  }
+  #portfolio .projectslist img {
+    width: 90%;
+    z-index: 1;
+    margin-top: 5em;
+  }
+  #portfolio .projectslist img:hover {
+    transform: scale(1.2);
   }
 }
 
