--- a/frontend/css/index.scss
+++ b/frontend/css/index.scss
@@ -185,8 +185,9 @@ h1 {
         height: 10%;
         padding: 0;
         margin: 0;
-        position: absolute;
         justify-content: flex-end;
+        position: fixed;
+        z-index: 100;
       }
       .navbar li {
         display: block;
@@ -215,7 +216,7 @@ h1 {
         margin: 0;
         padding: 0;
       }
-      .navbar li:hover ul {
+      .navbar li:active ul {
         display: block;
       }
       .navbar li ul li {
@@ -227,11 +228,27 @@ h1 {
         border-top: 1px solid #c9d4d8;
         border-bottom: 1px solid #444444;
       }
-      .navbar li ul li a:hover {
+      .navbar li ul li a:active {
         background-color: #a3a1a1;
       }
       i.fa.fa-solid.fa-list {
         display: initial;
+    }
+    #portfolio {
+        .projectslist {
+            display: flex;
+            justify-content: space-around;
+            flex-direction: column;
+            align-items: center;
+            img {
+                width: 90%;
+                z-index: 1;
+                margin-top: 5em;
+            }
+            img:hover {
+                transform:scale(1.2);
+            }
+        }
     }
   }
 
